# test_c

./: .gitignore  CMakeLists.txt  README.md  test_crc32_r.c  test_crc32_td.c  test_likely3.c
algorithm/dijkstra/: dijkstra.cpp
algorithm/dijkstra2/: dijkstra.cpp
algorithm/find_words/: find_words.cpp
algorithm/game_table/: game_table.c
algorithm/matrix_chain_order/: matrix_chain_order.c
algorithm/matrix_chain_order2/: matrix_chain_order2.c
algorithm/multi_machine_schedule/: multi_machine_schedule.c
algorithm/solve_n_queens/: solve_n_queens.cpp
algorithm/solve_sudoku/: solve_sudoku.cpp
algorithm/stack_sort/: stack_sort.c
algorithm/stack_sort2/: stack_sort.c
algorithm/stack_sort3/: stack_sort.cpp
algorithm/trie/: trie.cpp
compile/: a.c  b.c  b.h  hello.c
crc32/: test_crc32.c  test_crc32_rt.c
io_reuse/: poll_server.cpp
io_reuse/epoll_oneshot/: epoll_oneshot.cpp
io_reuse/epoll_oneshot2/: epoll_oneshot2.cpp
io_reuse/epoll_server/: epoll_server.cpp
io_reuse/kqueue/: test_kqueue.c
io_reuse/multi_port/: multi_port.cpp
io_reuse/poll_server2/: poll_server2.cpp
io_reuse/select_client/: select_client.cpp
io_reuse/select_server/: select_server.cpp
io_reuse/use_select/: use_select.cpp
likely/: test_likely.c  test_likely2.c
net/pton/: pton.cpp
signal/: test_signal1.c  test_signal2.c  test_signal3.c  test_signal4.c  test_signal5.c  test_signal6.c  test_signal7.c
syscall/: createprocess.c  dynamiccreateprocess  process.c  readme.md  staticcreateprocess
test/int/: hello.c
volatile/: test_volatile.c
编译过程/: lib.c  readme.md
(+9 files in other folders)
